objects/SVMXC_Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Admin_Functions__c</fullName>
        <description>Formula that determines if a user can see the review timesheet toolbar</description>
        <formula>if(contains( FST_Lead_ID__c ,$User.Id),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Admin Functions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <formula>Technician__r.FST_Anniversary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Time__c</fullName>
        <description>When the Manager approved the TS</description>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <formula>IMAGE(&quot;/img/msg_icons/warning24.gif&quot;, &quot;&quot;)&amp;
&quot;ENGLISH : bFS is not the system of record for time management.  Overtime is calculated and paid using country specific rules, policies and laws. If you have any questions pertaining to this, please see your manager or HR representative&quot;&amp; BR() &amp;
IMAGE(&quot;/img/msg_icons/warning24.gif&quot;, &quot;&quot;)&amp;
&quot;FRENCH : bFS n&apos;est pas le système de gestion des temps HR. Les heures supplémentaires sont calculées et payées selon les lois, règlements et politiques propres à chaque pays. Pour toute question à ce sujet, veuillez contacter votre Manager ou votre responsable des ressources humaines.&quot;</formula>
        <label>Disclaimer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_to_iPad__c</fullName>
        <formula>If (CONTAINS(  Related_User__c  , $User.Id ) &amp;&amp; ( End_Date__c &gt;= TODAY()-15), 1, 0)</formula>
        <label>Download to iPad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EditTimeEntryValid__c</fullName>
        <formula>if((End_Date__c &gt;= Today() &amp;&amp; Start_Date__c&lt;= Today()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditTimeEntryValid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSREmployeeID__c</fullName>
        <description>FSR Employee ID on the User record (via the Technician Record)</description>
        <formula>Technician__r.SVMXC__Salesforce_User__r.FSREmployeeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSR Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FST_Lead_ID__c</fullName>
        <description>Returns the user ID of the technician&apos;s manager.  Used to control visibility of the Timesheet Review toolbar</description>
        <formula>IF( isblank( Technician__r.SVMXC__Salesforce_User__c ),&quot;NA&quot;,  Technician__r.SVMXC__Salesforce_User__r.Manager.Id)</formula>
        <label>FST Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <description>Used for the Timesheet approval process</description>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Month_Driven__c</fullName>
        <formula>TEXT(YEAR(Start_Date__c )) &amp; if( LEN(TEXT(Month(Start_Date__c ))) =1,&quot;0&quot;&amp; Text(Month(Start_Date__c )),Text(Month(Start_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Driven</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>AND(!ISBLANK(Owner:User.ManagerId) , ((Owner:User.Id == $User.Id) || (Owner:User.ManagerId == $User.Id)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Technician__r.SVMXC__Salesforce_User__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <formula>Technician__r.SVMXC__Salesforce_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_FST_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FST Lead checks the box after completing the timesheet review at the end of the pay period</inlineHelpText>
        <label>Reviewed by FST Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Notes__c</fullName>
        <label>Submission Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the SMVXC_TimesheetAfter class to control submission of the timesheet to the approval process via the mobile device.</description>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_Time__c</fullName>
        <description>When the FSR submitted his TS</description>
        <label>Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Total_Hours__c</fullName>
        <label>Tech_Total_Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician_Active__c</fullName>
        <formula>if( Technician__r.SVMXC__Active__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_ID__c</fullName>
        <description>Reflects the Unique ID required by Runzheimer reports</description>
        <formula>Technician__r.SVMXC__Salesforce_User__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Timesheets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalBankHoursCollected__c</fullName>
        <description>BFOFS-3231 Oct 19</description>
        <label>Total Bank Hours Collected</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalBankHoursSpent__c</fullName>
        <description>BFOFS-3231 Oct 2019</description>
        <label>Total Bank Hours Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_On_Site_Time__c</fullName>
        <description>Reflects the total billable time that is spent on site at a location</description>
        <label>Total Billable On-Site Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Travel_Time__c</fullName>
        <description>Reflects the total travel time for this time period that is flagged as billable</description>
        <label>Total Billable Travel Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Friday__c</fullName>
        <label>Total Friday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Driven__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total of all miles reported</description>
        <label>Total Miles Driven</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monday__c</fullName>
        <label>Total Monday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_Hours__c</fullName>
        <formula>Total_Hours__c  -  Total_Billable_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nonbillable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_On_Site_time__c</fullName>
        <description>Reflects the total number of hours in this time period that were spent on-site, but were not billable</description>
        <label>Total Nonbillable On-Site time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_Travel_Time__c</fullName>
        <description>Reflects the total travel time for this time period that is not flagged as billable</description>
        <label>Total Nonbillable Travel Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saturday__c</fullName>
        <label>Total Saturday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sunday__c</fullName>
        <label>Total Sunday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Thursday__c</fullName>
        <label>Total Thursday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Off__c</fullName>
        <description>Total hours recorded for sick or vacation time</description>
        <label>Total Time Off</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Worked__c</fullName>
        <description>Reflects the total number of nonbillable time that is not vacation or sick time</description>
        <label>Total Time Worked</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tuesday__c</fullName>
        <label>Total Tuesday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_WO_Admin_Hours__c</fullName>
        <description>Calculates the SUM of times when the related WO record type is &quot;Admin&quot;</description>
        <label>Total WO Admin Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Wednesday__c</fullName>
        <label>Total Wednesday</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <formula>If( AND(OR(ISBLANK(Tech_Total_Hours__c), ISNULL(Tech_Total_Hours__c),Tech_Total_Hours__c == 0),Total_Billable_Hours__c != 0,Total_Hours__c != 0) , (Total_Billable_Hours__c/(Total_Hours__c - Total_Time_Off__c)), 

If(Tech_Total_Hours__c &gt; 0, Total_Billable_Hours__c/Tech_Total_Hours__c ,0) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>datePrior3Days__c</fullName>
        <description>Indicates that a timesheet&apos;s end date is more than 3 days in the past.</description>
        <formula>if( End_Date__c &lt;= TODAY()-3 , True ,False)</formula>
        <inlineHelpText>Indicates that a timesheet&apos;s end date is more than 3 days in the past.</inlineHelpText>
        <label>datePrior3Days</label>
        <type>Checkbox</type>
    </fields>
    <label>Timesheets</label>
    <listViews>
        <fullName>AMO_2</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Total_Miles_Driven__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>bFOManual User</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
        </filters>
        <label>Timesheets IT Issue</label>
        <language>en_US</language>
        <sharedTo>
            <group>AllSystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANC_Timesheets</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Technician__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Utilization__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Time_Off__c</columns>
        <columns>Total_WO_Admin_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Total_Miles_Driven__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>Anderson RAMOS,ANDRES MUÑOZ MESA,ANGEL SOLORZANO,BORIS FERNANDEZ,DANIEL CASTILLO</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>David BARRETO,EFRAIN CHAPARRO,FREDY AREVALO,JAIME QUEVEDO,JOHN ALEXIS SANCHEZ</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>Orlando PULIDO,ROBIN PEÑA,WILMER BAREÑO,AUGUSTO IGLESIAS,CRISTIAN BAYONA</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>FROILAN CARRANZA,John MEZA,OSCAR JAVIER RAMIREZ,Yeison ROJAS,JOSE ZAVA</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>HERNAN MONTENEGRO,SANTIAGO ALVAREZ,EDGARDO RIOS,Jaime GONZALEZ</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>ROBERTO DURAN,Leonel MARQUEZ,German ROJAS,Efrain MAMANI,Jesus Garcia</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>Manuel VEGA,Johan Véliz,Ysaac CANTORAL,DEYVI CALDERON,Luis MOLERO,Luis ARANGO</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>Ricardo ROJAS,Walter RIVERA,BERNABE SANTA CRUZ,Carlos E. Romero,Luis Ariza</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>ALEXANDER RAMIREZ CASTRO,Carlos Ramirez,Jose RODRIGUEZ,RAUL VIDAL</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>VICTOR TELLO,JHON BLAS,JHAMES JACO,JESUS GONZALEZ</value>
        </filters>
        <label>ANC Timesheets</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANC_bFS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APU_Timesheets_Chile</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Technician__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Utilization__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Time_Off__c</columns>
        <columns>Total_WO_Admin_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Total_Miles_Driven__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>ALEJANDRO ROBINSON ZOLA ACUNA,ISAAC MATIAS BERRIOS SAZO</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Arnaldo Pacheco,Cristian SANMARTIN,Luis Fuenzalida</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Franco Vial,ALBERTO ENRIQUE URRUTIA BARRA</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>ALEJANDRO ANDRES PAINEQUIR ARIAS,JEYSON JAVIER DAZA MORA</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>MIGUEL ILDEFONSO BARAHONA ARANEDA,SERGIO EDUARDO GUTIERREZ ROMERO</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>PABLO ESTEBAN ARRIAGADA PAREDES,PABLO ANDRES SANTIBANEZ NEUMANN</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>JUAN EDUARDO NUNEZ ALVARADO,RAPHAEL MARCELO RIVEROS OYARZO</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>EDMUNDO BRIONES,HUGO FRANCISCO PINA PRADO</value>
        </filters>
        <label>APU Timesheets Chile</label>
        <language>en_US</language>
        <sharedTo>
            <role>CL_SVS</role>
            <role>INTNL_SERVICES</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APU_Timesheets_Toni</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Technician__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Utilization__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Time_Off__c</columns>
        <columns>Total_WO_Admin_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Total_Miles_Driven__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Alejandro Mulieri,Bruno TORRES,Claudio Mosquera,Gonzalo Andres Garcia</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Gustavo Maldonado,Hernan Sciamanna,Juan Manuel Neira Zilli</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Mario Ariel Almada,Maximiliano Pereiro,SIFUENTES Martin</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>CAMPO Alejandro,Fausto Baum,Ignacio Delgado</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Julio Fernandez,Maximiliano Horacio Tusso,Sergio Suarez</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Walter Maza</value>
        </filters>
        <label>APU Timesheets</label>
        <language>en_US</language>
        <sharedTo>
            <group>AR_FS_GRP1</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>trevor howarth</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>trevor howarth</value>
        </filters>
        <label>trevor</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_Central_Cooling_ITD</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Muzareel Syam Bin OMAR,Mohd Hazizul YUSRAN</value>
        </filters>
        <label>All Malaysia_Central Power ITD_APC</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_Central_Network_ITD</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved,Open,Submitted</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Kai Xin TAN,Mohd Asyraf,Tze Jiang LAW</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2017</value>
        </filters>
        <label>All Malaysia_Central Network ITD</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_Central_Network_ITD_OPEN</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Kai Xin TAN,Mohd Asyraf,Tze Jiang</value>
        </filters>
        <label>All Malaysia_Central Network ITD_OPEN</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_Central_Power_ITD</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved,Submitted,Open</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Mohd Faizal,MASAMSUL,Mohamad Hafiz Bin TAMRIN</value>
        </filters>
        <label>All Malaysia_Central Cooling ITD</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_Central_Power_ITD_MGE</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved,Open,Submitted</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Radin Md Firdaus Radin Mohd Ali,Eng Hui ENG,Zulmi ISMAIL</value>
        </filters>
        <label>All Malaysia_Central Power ITD_MGE</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_E_P_1</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Abu Bakar,Arthur Ho Guan,Chee Keong,Farhanah,Krishnan,Mohamad HAFIZ,Mohd Asrul</value>
        </filters>
        <label>All Malaysia_E&amp;P_1</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_E_P_2</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Mohd Idham MOHD NORDIN,Mohd Idris bin,Mohd Shaiful Bin Zainal,Muhammad Zulfarhan</value>
        </filters>
        <label>All Malaysia_E&amp;P_2</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Malaysia_E_P_3</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Billable_Hours__c</columns>
        <columns>Total_Nonbillable_Hours__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Utilization__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Approved</value>
        </filters>
        <filters>
            <field>Technician_Active__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>equals</operation>
            <value>Ruthran,Wira Khan,Zainuddin bin</value>
        </filters>
        <label>All Malaysia_E&amp;P_3</label>
        <language>en_US</language>
        <sharedTo>
            <group>MY_Services_Ops_ITD</group>
        </sharedTo>
    </listViews>
</CustomObject>